plugins {
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
}

ext {
    springbootMavenBomVersion = '3.1.2'
}

group = 'se.inera.intyg.minaintyg'
version = '4.0.0-SNAPSHOT'

allprojects {
    repositories {
        mavenCentral()
        maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/" }
    }
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }
}
